# signet-py

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
characters/: signet.yaml
scripts/: repair_research_synthesis.py
src/signet/: __init__.py  __main__.py  cli.py  config.py
src/signet/brain/: client.py
src/signet/character/: __init__.py  loader.py  prompt.py  sampler.py
src/signet/core/: responder.py
src/signet/evaluators/: __init__.py
src/signet/interfaces/: __init__.py  discord.py
src/signet/knowledge/: __init__.py  ingest.py  parser.py  schema.sql  store.py  summarize.py
src/signet/memory/: __init__.py  embeddings.py  schema.sql  store.py
src/signet/models/: character.py  dreams.py  knowledge.py  memory.py  research.py
src/signet/nightshift/: __init__.py  dreamer.py  preferences.py  prompts.py  research_prompts.py  research_schema.sql  research_store.py  researcher.py  schema.sql  store.py  wiki_writer.py
src/signet/providers/: __init__.py  biorxiv.py  pubmed.py  web.py
src/signet/tools/: __init__.py  filesystem.py  web.py
tests/: conftest.py  helpers.py  test_discord_attachments.py  test_dream_scheduler.py  test_dreamer.py  test_models.py  test_preferences.py  test_prompt.py  test_research_models.py  test_research_store.py  test_researcher.py  test_stores.py  test_summarize.py  test_tools.py  test_web_provider.py  test_web_tools.py  test_wiki_writer.py
